k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoramento
  labels:
    app.kubernetes.io/managed-by: azure-pipelines
